--- a/index.html
+++ b/index.html
@@ -155,6 +155,16 @@
             <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 98%" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
+    <div class="mb-2"><span>Microservice</span>
+      <div class="progress my-1">
+        <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    </div>
+    <div class="mb-2"><span>Infrastructure Docker, Kubernetes, PaaS and SaaS (DevOps)</span>
+      <div class="progress my-1">
+        <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="91" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    </div>
 	  <div class="mb-2"><span>Python</span>
           <div class="progress my-1">
           <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100"></div>
@@ -165,19 +175,9 @@
             <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
-        <div class="mb-2"><span>Infrastructure Docker, Kubernetes, PaaS and SaaS</span>
-          <div class="progress my-1">
-            <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="91" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div>
         <div class="mb-2"><span>C/C++</span>
           <div class="progress my-1">
             <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 75%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div>
-        <div class="mb-2"><span>Microservice</span>
-          <div class="progress my-1">
-            <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
         <div class="mb-2"><span>MYSQL/SQL Server/SQL Language</span>
@@ -225,6 +225,13 @@
   <div class="certificate-section px-3 px-lg-4 pb-4">
     <h2 class="h3 mb-4">Certificate</h2>
     <div class="timeline">
+      <div class="timeline-card timeline-card-cert card shadow-sm">
+        <div class="card-body">
+          <div class="h5 mb-1">Kubernetes by Doing: Kubernetes the Hard Way (CKA) </div>
+          <div class="text-muted text-small mb-2">2021 Jul</div>
+          <div><a href="https://www.udemy.com/certificate/UC-0b4c8919-d113-48f1-9cea-58b1f20ba917/" target="blank">Backend Development in 2021 with Python, Django, SQLite3, Heroku, GIT</a></div>
+        </div>
+      </div>
       <div class="timeline-card timeline-card-cert card shadow-sm">
         <div class="card-body">
           <div class="h5 mb-1">Backend Development in 2021 with Python, Django, SQLite3, Heroku, GIT</div>
