--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         }
       </style>
     </noscript>
-    <meta http-equiv="refresh" content="1; URL=https://www.linkedin.com/in/ja7ad" />
   </head>
   <body id="top">
     <header class="d-print-none">
@@ -74,7 +73,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h3 mb-3">About Me</h2>
-        <p>I'm a Software Engineer experienced in Microservice, Clean Architecture, and Infrastructure. I have expertise in a wide range of IT disciplines, with a focus on Systems Analysis, Design, Development, and Implementation of various applications.</p>
+        <p>Javed has over 7 years of experience in software development. He have expertise in a wide range of IT disciplines, with a focus on Systems Analysis, Design, Development, and Implementation of various applications. He has over 2 years of experience with Microservice Architecture, Clean Architecture, Master-Slave Architecture and Infrastructure.</p>
         
        
 	    </div>
@@ -91,7 +90,7 @@
             <div class="pb-1">Email</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">dev@javad.tech</div>
+            <div class="pb-1 text-secondary">ja7ad@live.com</div>
           </div>
           <div class="col-sm-4">
             <div class="pb-1">Phone</div>
