--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
         <h1 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Javad Rajabzade</h1>
-        <p data-aos="fade-left" data-aos-delay="100">Software Engineer</p>
+        <p data-aos="fade-left" data-aos-delay="100">Software Engineer & DevOps Student</p>
         <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="https://raw.githubusercontent.com/Ja7ad/Ja7ad.github.io/main/resume/Javad.pdf" target="_blank">Download Resume</a><a class="btn btn-success shadow-sm mt-1" href="https://github.com/Ja7ad">Github Profile</a>
           <a class="btn btn-warning shadow-sm mt-1" href="https://www.linkedin.com/in/ja7ad/">Linkedin</a> <a class="btn btn-info shadow-sm mt-1" href="https://dev.to/Ja7ad">Blog Dev.to</a>
         </div>
@@ -160,7 +160,7 @@
         <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
     </div>
-    <div class="mb-2"><span>Infrastructure Docker, Kubernetes, PaaS and SaaS (DevOps)</span>
+    <div class="mb-2"><span>Infrastructure Docker, Kubernetes, PaaS and SaaS</span>
       <div class="progress my-1">
         <div class="progress-bar bg-success" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="91" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
