--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       <div class="profile-card-ctr">
         <button onclick="location.href='https://raw.githubusercontent.com/Ja7ad/Ja7ad.github.io/main/resume/Javad.pdf'" class="profile-card__button button--blue js-message-btn">Download Resume</button>
-        <button onclick="location.href='https://bitstack.substack.com/'"  class="profile-card__button button--orange">Bitstack Blogk</button>
+        <button onclick="location.href='https://bitstack.substack.com/'"  class="profile-card__button button--orange">Bitstack Blog</button>
       </div>
     </div>
 
